--- a/src/main/resources/templates/board/save-form.mustache
+++ b/src/main/resources/templates/board/save-form.mustache
@@ -7,7 +7,10 @@
     <div class="card">
         <div class="card-header"><b>글쓰기 화면입니다</b></div>
         <div class="card-body">
-            <form action="/board/save" method="post" enctype="application/x-www-form-urlencoded">
+            <form action="/board/save" method="post">
+                <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Enter username" name="username">
+                </div>
                 <div class="mb-3">
                     <input type="text" class="form-control" placeholder="Enter title" name="title">
                 </div>
@@ -21,3 +24,4 @@
 </div>
 
 {{> /layout/footer}}
+
