--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -4,7 +4,7 @@
 
     <!-- 수정삭제버튼 -->
     <div class="d-flex justify-content-end">
-        <a href="board/{{board.id}}/update-form">수정</a>
+        <a href="/board/{{board.id}}/update-form" class="btn btn-warning me-1">수정</a>
         <form action="/board/{{board.id}}/delete" method="post">
             <button class="btn btn-danger">삭제</button>
         </form>
