--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -23,18 +23,22 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/join-form">회원가입</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login-form">로그인</a>
-                </li>
+                {{^sessionUser}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login-form">로그인</a>
+                    </li>
+                {{/sessionUser}}
                 <li class="nav-item">
                     <a class="nav-link" href="/board/save-form">글쓰기</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/user/update-form">회원정보보기</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">로그아웃</a>
-                </li>
+                {{#sessionUser}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">로그아웃</a>
+                    </li>
+                {{/sessionUser}}
             </ul>
         </div>
     </div>
