--- a/src/main/resources/templates/board/update-form.mustache
+++ b/src/main/resources/templates/board/update-form.mustache
@@ -7,10 +7,7 @@
     <div class="card">
         <div class="card-header"><b>글수정하기 화면입니다</b></div>
         <div class="card-body">
-            <form action="/board/{{id}}/update" method="post">
-                <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" value="{{board.username}}">
-                </div>
+            <form action="/board/{{board.id}}/update" method="post">
                 <div class="mb-3">
                     <input type="text" class="form-control" placeholder="Enter title" name="title" value="{{board.title}}">
                 </div>
