--- a/src/main/resources/templates/user/update-form.mustache
+++ b/src/main/resources/templates/user/update-form.mustache
@@ -10,13 +10,13 @@
         <div class="card-body">
             <form action="/user/update" method="post" enctype="application/x-www-form-urlencoded">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" disabled>
+                    <input type="text" value="{{user.username}}" class="form-control" placeholder="Enter username" disabled>
                 </div>
                 <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Enter password" name="password">
                 </div>
                 <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Enter email" name="email" disabled>
+                    <input type="email" value="{{user.email}}" class="form-control" placeholder="Enter email" name="email">
                 </div>
                 <button type="submit" class="btn btn-primary form-control">회원가입수정</button>
             </form>
@@ -25,3 +25,4 @@
 </div>
 
 {{> /layout/footer}}
+
