--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -3,14 +3,14 @@
 <div class="container p-5">
 
     <!-- 수정삭제버튼 -->
-    {{#isOwner}}
+    {{#board.isOwner}}
         <div class="d-flex justify-content-end">
             <a href="/board/{{board.id}}/update-form" class="btn btn-warning me-1">수정</a>
             <form action="/board/{{board.id}}/delete" method="post">
                 <button class="btn btn-danger">삭제</button>
             </form>
         </div>
-    {{/isOwner}}
+    {{/board.isOwner}}
 
 
     <div class="d-flex justify-content-end">
